# laminardb

./: CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Cross.toml  GETTING_STARTED.md  README.md  SECURITY.md  cliff.toml  compatibility.json  demo_stderr.txt  deny.toml  perf_handle.d
.claude/: settings.json  (+1 more)
crates/laminar-admin/: Cargo.toml  README.md
crates/laminar-admin/src/: api.rs  cli.rs  dashboard.rs  lib.rs
crates/laminar-auth/: Cargo.toml  README.md
crates/laminar-auth/src/: authn.rs  authz.rs  lib.rs  rls.rs
crates/laminar-connectors/: Cargo.toml  README.md
crates/laminar-connectors/src/: cdc.rs  checkpoint.rs  config.rs  connector.rs  error.rs  health.rs  lib.rs  lookup.rs  metrics.rs  reference.rs  registry.rs  runtime.rs  testing.rs
crates/laminar-connectors/src/bridge/: config.rs  metrics.rs  mod.rs  runtime.rs  sink_bridge.rs  source_bridge.rs
crates/laminar-connectors/src/kafka/: avro.rs  avro_serializer.rs  backpressure.rs  config.rs  metrics.rs  mod.rs  offsets.rs  partitioner.rs  rebalance.rs  schema_registry.rs  sink.rs  sink_config.rs  sink_metrics.rs  source.rs  watermarks.rs
crates/laminar-connectors/src/lakehouse/: delta.rs  delta_config.rs  delta_metrics.rs  iceberg.rs  iceberg_config.rs  iceberg_metrics.rs  metrics.rs  mod.rs
crates/laminar-connectors/src/postgres/: mod.rs  sink.rs  sink_config.rs  sink_metrics.rs  types.rs
crates/laminar-connectors/src/sdk/: builder.rs  defaults.rs  harness.rs  mod.rs  rate_limit.rs  retry.rs  schema.rs
crates/laminar-connectors/src/serde/: csv.rs  debezium.rs  json.rs  mod.rs  raw.rs
crates/laminar-connectors/src/storage/: masking.rs  mod.rs  provider.rs  resolver.rs  validation.rs
crates/laminar-core/: Cargo.toml  README.md
crates/laminar-core/benches/: dag_bench.rs  dag_stress.rs  io_uring_bench.rs  join_bench.rs  latency_bench.rs  reactor_bench.rs  state_bench.rs  streaming_bench.rs  subscription_bench.rs  throughput_bench.rs  tpc_bench.rs  window_bench.rs
crates/laminar-core/src/: lib.rs
crates/laminar-core/src/alloc/: detector.rs  guard.rs  object_pool.rs  scratch.rs
crates/laminar-core/src/budget/: mod.rs  monitor.rs  stats.rs  task_budget.rs  yield_reason.rs
crates/laminar-core/src/compiler/: bridge.rs  metrics.rs  mod.rs  query.rs
crates/laminar-core/src/dag/: builder.rs  changelog.rs  checkpoint.rs  error.rs  executor.rs  mod.rs  multicast.rs  recovery.rs  routing.rs  tests.rs  topology.rs  watermark.rs
crates/laminar-core/src/detect/: config.rs  cpu.rs  io.rs  kernel.rs  mod.rs
crates/laminar-core/src/io_uring/: buffer_pool.rs  config.rs  error.rs  manager.rs  ring.rs  sink.rs
crates/laminar-core/src/mv/: executor.rs  mod.rs  registry.rs  watermark.rs
crates/laminar-core/src/numa/: allocator.rs  error.rs  mod.rs  topology.rs
crates/laminar-core/src/operator/: asof_join.rs  changelog.rs  lag_lead.rs  lookup_join.rs  mod.rs  partitioned_topk.rs  session_window.rs  sliding_window.rs  stream_join.rs  table_cache.rs  temporal_join.rs  topk.rs  watermark_sort.rs  window.rs  window_sort.rs
crates/laminar-core/src/reactor/: mod.rs
crates/laminar-core/src/sink/: adapter.rs  checkpoint.rs  dedup.rs  error.rs  idempotent.rs  mod.rs  traits.rs  transaction.rs  transactional.rs  two_phase.rs
crates/laminar-core/src/state/: changelog_aware.rs  mmap.rs  mod.rs
crates/laminar-core/src/streaming/: broadcast.rs  channel.rs  checkpoint.rs  config.rs  error.rs  mod.rs  ring_buffer.rs  sink.rs  source.rs  subscription.rs
crates/laminar-core/src/subscription/: backpressure.rs  batcher.rs  callback.rs  dispatcher.rs  event.rs  filter.rs  handle.rs  mod.rs  notification.rs  registry.rs  stream.rs
crates/laminar-core/src/time/: alignment_group.rs  event_time.rs  keyed_watermark.rs  mod.rs  partitioned_watermark.rs  watermark.rs
crates/laminar-core/src/tpc/: backpressure.rs  core_handle.rs  mod.rs  router.rs  runtime.rs  spsc.rs  zero_alloc_tests.rs
crates/laminar-core/src/xdp/: config.rs  error.rs  header.rs  loader_linux.rs  loader_stub.rs  mod.rs  stats.rs
crates/laminar-db/: Cargo.toml  README.md
crates/laminar-db/src/: asof_batch.rs  batch_filter.rs  builder.rs  catalog.rs  checkpoint_coordinator.rs  config.rs  connector_manager.rs  db.rs  error.rs  handle.rs  lib.rs  metrics.rs  pipeline_checkpoint.rs  recovery_manager.rs  sql_utils.rs  stream_executor.rs  table_backend.rs  table_cache_mode.rs  table_provider.rs  table_store.rs
crates/laminar-db/tests/: checkpoint_performance.rs  checkpoint_recovery.rs  chunking_test.rs  perf_handle.rs
crates/laminar-derive/: Cargo.toml  README.md
crates/laminar-derive/src/: connector_config.rs  from_record_batch.rs  lib.rs  record.rs
crates/laminar-observe/: Cargo.toml  README.md
crates/laminar-observe/src/: health.rs  lib.rs  metrics.rs  tracing.rs
crates/laminar-server/: Cargo.toml  README.md
crates/laminar-server/src/: main.rs
crates/laminar-sql/: Cargo.toml  README.md
crates/laminar-sql/src/: lib.rs
crates/laminar-storage/: Cargo.toml  README.md
crates/laminar-storage/benches/: checkpoint_bench.rs  wal_bench.rs
crates/laminar-storage/src/: changelog_drainer.rs  checkpoint.rs  checkpoint_manifest.rs  checkpoint_store.rs  io_uring_wal.rs  lakehouse.rs  lib.rs  wal.rs  wal_state_store.rs
crates/laminardb/: Cargo.toml
crates/laminardb/examples/: basic_source.rs  derive_macros.rs  multiple_sources.rs  show_describe.rs  streaming_pipeline.rs
crates/laminardb/src/: lib.rs
examples/demo/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/demo/scripts/: setup-kafka.sh
examples/demo/sql/: sinks.sql  sinks_kafka.sql  sources.sql  sources_kafka.sql  streams.sql
examples/demo/src/: app.rs  asof_merge.rs  generator.rs  lib.rs  main.rs  producer.rs  system_stats.rs  tui.rs  types.rs
examples/shopstream/: Cargo.toml  docker-compose.yml
examples/shopstream/scripts/: setup-kafka.sh
examples/shopstream/sql/: sinks.sql  sinks_kafka.sql  sources.sql  sources_kafka.sql  streams.sql  streams_kafka.sql  tables.sql
examples/shopstream/src/: generator.rs  main.rs  types.rs
(+296 files in other folders)
