[workspace]
members = [
    "crates/laminar-core",
    "crates/laminar-sql",
    "crates/laminar-storage",
    "crates/laminar-connectors",
    "crates/laminar-auth",
    "crates/laminar-admin",
    "crates/laminar-observe",
    "crates/laminar-server",
    "crates/laminar-derive",
    "crates/laminar-db",
    "examples/demo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["LaminarDB Contributors"]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/laminardb/laminardb"
homepage = "https://laminardb.io"
documentation = "https://laminardb.io/api/laminar_db"
readme = "README.md"
keywords = ["streaming", "database", "sql", "embedded", "real-time"]
categories = ["database", "embedded", "data-structures"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.8", features = ["std", "alloc", "bytecheck"] }
bytes = "1.11"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

# Performance-critical
fxhash = "0.2"  # Faster than std HashMap
crossbeam = "0.8"  # Lock-free data structures
parking_lot = "0.12"  # Faster Mutex/RwLock
memmap2 = "0.9"  # Memory-mapped files
bumpalo = "3.19"  # Arena allocator
uuid = { version = "1.19", features = ["v4"] }  # Unique IDs

# DataFusion and Arrow - using latest versions
arrow = { version = "57.2", default-features = true }
arrow-array = "57.2"
arrow-schema = "57.2"
arrow-buffer = "57.2"
arrow-data = "57.2"
arrow-cast = "57.2"
arrow-ipc = "57.2"
arrow-select = "57.2"
datafusion = "52.0"
datafusion-common = "52.0"
datafusion-expr = "52.0"
datafusion-sql = "52.0"
sqlparser = "0.60"

# Async
tokio-stream = "0.1"

# Collections
smallvec = { version = "1.15", features = ["const_new", "union"] }
arrayvec = "0.7"

# Platform-specific
libc = "0.2"
io-uring = "0.7"  # Low-level io_uring bindings (Linux only)

# Randomness
rand = "0.8"

# Testing
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.9"
tempfile = "3.24"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false

[profile.bench]
inherits = "release"
debug = true