[package]
name = "laminar-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_auth"
description = "Authentication and authorization for LaminarDB"

[dependencies]
# JWT support
jsonwebtoken = "10.3"

# Cryptography
ring = "0.17"

# Common
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }