[package]
name = "laminar-connectors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.laminardb.io/laminar-connectors"
description = "External system connectors for LaminarDB - Kafka, CDC, lookup tables"

[dependencies]
# Core dependencies
laminar-core = { path = "../laminar-core" }
laminar-storage = { path = "../laminar-storage" }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
arrow-avro = { version = "57.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Database drivers for CDC
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.34", optional = true }

# Common
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

# Arrow for RecordBatch
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }

[features]
default = []
kafka = ["dep:rdkafka", "dep:arrow-avro", "dep:reqwest"]
postgres-cdc = ["dep:tokio-postgres"]
mysql-cdc = ["dep:mysql_async"]

[dev-dependencies]
tempfile = { workspace = true }