[package]
name = "laminar-connectors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_connectors"
description = "External system connectors for LaminarDB - Kafka, CDC, lookup tables"

[dependencies]
# Core dependencies
laminar-core = { path = "../laminar-core", version = "0.1.0" }
laminar-storage = { path = "../laminar-storage", version = "0.1.0" }

# Kafka
rdkafka = { version = "0.39", features = ["cmake-build"], optional = true }
arrow-avro = { version = "57.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Database drivers for CDC and sinks
tokio-postgres = { version = "0.7", optional = true }
postgres-types = { version = "0.2", optional = true }
# MySQL async driver with rustls (no OpenSSL required)
mysql_async = { version = "0.34", optional = true, default-features = false, features = ["rustls-tls", "binlog", "minimal-rust"] }
tokio-stream = { workspace = true, optional = true }

# Delta Lake - using git main branch (has DataFusion 52.1.0)
# Published 0.30.2 requires DF 51.0, but main branch has DF 52.x
deltalake = { git = "https://github.com/delta-io/delta-rs", branch = "main", optional = true, default-features = false, features = ["rustls"] }
url = { version = "2", optional = true }
uuid = { workspace = true }

# Common
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

# Arrow for RecordBatch
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }

[features]
default = []
kafka = ["dep:rdkafka", "dep:arrow-avro", "dep:reqwest"]
postgres-cdc = ["dep:tokio-postgres"]
postgres-sink = ["dep:tokio-postgres", "dep:postgres-types"]
# mysql-cdc: Business logic + mysql_async driver with rustls (no OpenSSL required)
mysql-cdc = ["dep:mysql_async", "dep:tokio-stream"]
# Delta Lake - using git main branch with DataFusion 52.x
delta-lake = ["dep:deltalake", "dep:url", "deltalake/datafusion"]
delta-lake-s3 = ["delta-lake", "deltalake/s3"]
delta-lake-azure = ["delta-lake", "deltalake/azure"]
delta-lake-gcs = ["delta-lake", "deltalake/gcs"]
delta-lake-unity = ["delta-lake", "deltalake/unity-experimental"]
delta-lake-glue = ["delta-lake", "deltalake/glue"]

[dev-dependencies]
tempfile = { workspace = true }