[package]
name = "laminar-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.laminardb.io/laminar-core"
description = "Core streaming engine for LaminarDB - reactor, operators, and state management"

[features]
default = []
# Enable hot path allocation detection - panics on allocation in marked sections
allocation-tracking = []
# Enable io_uring support (Linux 5.10+ only)
io-uring = ["dep:io-uring"]
# Enable hwlocality for enhanced NUMA topology discovery
hwloc = ["dep:hwlocality"]

[dependencies]
# Performance critical - no allocations on hot path
fxhash = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }
bumpalo = { workspace = true }
uuid = { workspace = true }
smallvec = { workspace = true }
arrayvec = { workspace = true }

# Arrow for columnar data
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }
arrow-ipc = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization for state (rkyv for zero-copy, serde for compatibility)
rkyv = { workspace = true }
serde = { workspace = true }

# Async for Ring 1 communication
tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }

# Observability
tracing = { workspace = true }

# Thread-per-core
num_cpus = "1.17"

# NUMA topology (optional, enhanced detection)
hwlocality = { version = "1.0.0-alpha.8", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
io-uring = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "basetsd"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }

[[bench]]
name = "reactor_bench"
harness = false

[[bench]]
name = "state_bench"
harness = false

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "window_bench"
harness = false

[[bench]]
name = "tpc_bench"
harness = false

[[bench]]
name = "io_uring_bench"
harness = false