[package]
name = "laminar-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_db"
description = "Unified database facade for LaminarDB"

[features]
default = []
api = []  # FFI-friendly API module for language bindings
ffi = ["api", "arrow/ffi"]  # C FFI layer (extern "C" functions, cbindgen headers, Arrow C Data Interface)
kafka = ["laminar-connectors/kafka"]
postgres-cdc = ["laminar-connectors/postgres-cdc"]
postgres-sink = ["laminar-connectors/postgres-sink"]

[dependencies]
laminar-core = { path = "../laminar-core", version = "0.1.0" }
laminar-sql = { path = "../laminar-sql", version = "0.1.0" }
laminar-connectors = { path = "../laminar-connectors", version = "0.1.0" }

# Arrow
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# DataFusion
datafusion = { workspace = true }
datafusion-common = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# SQL parser (for AST type references)
sqlparser = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Observability
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
laminar-derive = { path = "../laminar-derive", version = "0.1.0" }
