[package]
name = "laminar-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_derive"
description = "Derive macros for LaminarDB Record and FromRecordBatch traits"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
laminar-core = { path = "../laminar-core", version = "0.13.0" }
laminar-connectors = { path = "../laminar-connectors", version = "0.13.0" }
