[package]
name = "laminar-observe"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_observe"
description = "Observability for LaminarDB - metrics, tracing, health checks"

[dependencies]
# Metrics
prometheus = { version = "0.14", default-features = false }
opentelemetry = "0.31"
opentelemetry-prometheus = "0.31"

# Tracing
tracing = { workspace = true }
tracing-opentelemetry = "0.32"

# Health checks
axum = "0.8"

# Common
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }