[package]
name = "laminar-sql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_sql"
description = "SQL layer for LaminarDB with streaming extensions"

[dependencies]
# Core dependency
laminar-core = { path = "../laminar-core", version = "0.13.0" }

# DataFusion for SQL processing
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-sql = { workspace = true }

# Arrow for columnar data
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# SQL parsing
sqlparser = "0.60"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Concurrency
parking_lot = { workspace = true }

# Observability
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }