[package]
name = "laminar-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_storage"
description = "Storage layer for LaminarDB - WAL, checkpointing, and lakehouse integration"

[dependencies]
# Core dependency
laminar-core = { path = "../laminar-core", version = "0.1.0" }

# Storage
rocksdb = { version = "0.24", optional = true }
object_store = "0.13"  # For cloud storage
parquet = "57.2"  # For lakehouse formats
delta_kernel = { version = "0.19", optional = true }  # Delta Lake

# Serialization (rkyv for zero-copy performance)
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# CRC32 for WAL integrity
crc32c = "0.6"

# Fast hash for changelog entries
fxhash = "0.2"

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb"]
delta = ["dep:delta_kernel"]
io-uring = ["laminar-core/io-uring"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "checkpoint_bench"
harness = false