[package]
name = "laminardb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.laminardb.io"
description = "LaminarDB - An embedded streaming database. SQLite for stream processing."

[dependencies]
laminar-core = { path = "../laminar-core" }
laminar-sql = { path = "../laminar-sql" }
laminar-db = { path = "../laminar-db" }
laminar-derive = { path = "../laminar-derive" }

# Re-export arrow for users
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Async
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
