[package]
name = "laminardb-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Market Data Demo: Real-time analytics with Ratatui TUI for LaminarDB"

[lib]
name = "laminardb_demo"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "producer"
path = "src/producer.rs"
required-features = ["kafka"]

[features]
default = []
kafka = ["laminar-db/kafka", "dep:rdkafka", "dep:serde", "dep:serde_json"]

[dependencies]
laminar-db = { path = "../../crates/laminar-db" }
laminar-derive = { path = "../../crates/laminar-derive" }
laminar-core = { path = "../../crates/laminar-core" }

# Arrow
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }

# Utilities
chrono = { workspace = true }
rand = { workspace = true }

# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

# System metrics
sysinfo = "0.33"

# Kafka (optional)
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
