[package]
name = "laminardb-demo"
version = "0.13.0"
edition = "2021"
publish = false
description = "Market Data Demo: Real-time analytics with Ratatui TUI for LaminarDB"

[lib]
name = "laminardb_demo"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "producer"
path = "src/producer.rs"
required-features = ["kafka"]

[features]
default = []
kafka = ["laminar-db/kafka", "dep:rdkafka", "dep:serde", "dep:serde_json"]

[dependencies]
laminar-db = { path = "../../crates/laminar-db", version = "0.13.0" }
laminar-derive = { path = "../../crates/laminar-derive", version = "0.13.0" }
laminar-core = { path = "../../crates/laminar-core", version = "0.13.0" }

# Arrow
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }

# Utilities
chrono = { workspace = true }
rand = { workspace = true }

# TUI
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = "0.29"

# System metrics
sysinfo = "0.38"

# Kafka (optional)
rdkafka = { version = "0.39", features = ["cmake-build"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
