[package]
name = "shopstream-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "ShopStream: E-Commerce Analytics Demo for LaminarDB"

[[bin]]
name = "shopstream"
path = "src/main.rs"

[features]
default = []
kafka = ["laminar-db/kafka", "dep:rdkafka", "dep:serde", "dep:serde_json"]

[dependencies]
laminar-db = { path = "../../crates/laminar-db" }
laminar-derive = { path = "../../crates/laminar-derive" }
laminar-core = { path = "../../crates/laminar-core" }

# Arrow
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }

# Utilities
chrono = { workspace = true }
rand = { workspace = true }

# Kafka (optional)
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
